scss/custom.scss: Fix search bar gappings

--- a/app/views/assets/scss/custom.scss
+++ b/app/views/assets/scss/custom.scss
@@ -1,20 +1,21 @@
-.square{
+$input-colour: black;
+
+.square {
     border-radius: 0!important;
 }
 
-.input-group-cream{
+.input-group-cream {
     width: calc(100% + 15px);
 }
 
-.text-cream{
-    background-color: #fff5e6;
-    font-variant: small-caps;
-    border-color: #995c00;
-    border-left: none;
-    margin-left: -12px;
+.text-field-colour {
+    background-color: #fff5e6 !important;
+    border-color: #995c00 !important;
+    opacity: 1 !important;
+    color: $input-colour;
 }
 
-.glyphicon-cream{
+.glyphicon-cream {
     background-color: #fff5e6;
     color: #000000;
     border-color: #995c00;
@@ -22,7 +23,7 @@
     font-size: 25px;
 }
 
-.btn-light-cream{
+.btn-light-cream {
     background-color: #ffcc80;
     font-variant: small-caps;
     border-color: #995c00;
@@ -31,11 +32,11 @@
     margin-right: 12px;
 }
 
-.btn-light-cream:hover, .btn-light-cream:focus, .btn-light-cream:active{
+.btn-light-cream:hover, .btn-light-cream:focus, .btn-light-cream:active {
     border-color: #995c00;
 }
 
-.btn-dark-orange{
+.btn-dark-orange {
     background-color: #ffa31a;
     text-transform: uppercase;
     font-weight: bold;
@@ -43,47 +44,59 @@
     color: #995c00;
 }
 
-.btn-dark-orange:hover, .btn-dark-orange:focus, .btn-dark-orange:active{
+.btn-dark-orange:hover, .btn-dark-orange:focus, .btn-dark-orange:active {
     background-color: #ffd699;
 }
 
-.no-margin{
+.no-left-margin {
+    margin-left: 0;
+}
+
+.align-left-margin {
+    margin-left: -1px;
+}
+
+.no-right-margin {
+    margin-right: 0;
+}
+
+.no-side-margin {
     margin-left: 0;
     margin-right: 0;
 }
 
-.no-bot-margin{
+.no-bot-margin {
     margin-bottom:0;
 }
 
-.no-margin{
+.no-margin {
     margin-bottom:0;
     margin-top:0;
 }
 
-.no-padding{
+.no-padding {
     padding-right:0;
     padding-left:0;
 }
 
-.custom-dropdown{
+.custom-dropdown {
     padding: 0;
     margin: 0;
 }
 
-.no-padding-right{
+.no-padding-right {
     padding-right:0;
 }
 
-.search-top-offset{
+.search-top-offset {
     margin-top: 55vh;
 }
 
-.panel-top-offset{
+.panel-top-offset {
     margin-top: 10vh;
 }
 
-.white-input{
+.white-input {
     color: #ffffff;
     font-variant: small-caps;
     margin: 0;
@@ -91,18 +104,18 @@
     font-size: 20px;
 }
 
-.no-top{
+.no-top {
     top: 0;
 }
 
-.hide-left{
+.hide-left {
     position: absolute;
     left: -9999px;
     width: 1px;
     height: 1px;
 }
 
-.map-dimensions{
+.map-dimensions {
     overflow: hidden;
     height: calc(100vh - 52px);
     width: 100%;
@@ -130,12 +143,12 @@
     border-width: 0;
 }
 
-.navbar-default .navbar-nav > li > a{
+.navbar-default .navbar-nav > li > a {
     color: #995c00;
 }
 
 .navbar-default .navbar-nav > li > a:hover,
-.navbar-default .navbar-nav > li > a:focus {
+.navbar-default .navbar-nav > li > a:focus  {
     color: black;
 }
 
@@ -143,7 +156,7 @@
     color: black !important;
 }
 
-#login-dp{
+#login-dp {
     min-width: 250px;
     padding: 14px 14px 0;
     overflow:hidden;
@@ -156,19 +169,37 @@
     }
 }
 
-@media(max-width:768px){
-    #login-dp{
-        background-color: inherit;
-        color: #fff;
-    }
-    #login-dp .bottom{
-        background-color: inherit;
-        border-top:0 none;
+.full-width {
+    width: 100%;
+}
+
+/* style icon */
+.inner-addon {
+    position: relative;
+    .glyphicon {
+        position: absolute;
+        padding: 10px;
+        pointer-events: none;
     }
 }
 
-.full-width {
-    width: 100%;
+.left-addon {
+    /* align icon */
+    .glyphicon {
+        left: 0px;
+    }
+    /* add padding  */
+    input {
+        padding-left: 30px;
+    }
+}
+
+.right-dropdown {
+    display: table;
+}
+
+.uib-time input {
+    width: 100% !important;
 }
 
 .dropdown-menu-types {
@@ -184,7 +215,15 @@ input[type="checkbox"] + label {
     margin-right: 0;
 }
 
-
 input[type="checkbox"]:checked + label {
     background-color: #995c00;
+}
+.fix-padding {
+    padding-left: 0px;
+    padding-right: 0px;
+    margin-right: -1px;
+}
+
+.text-align-left {
+    text-align: left !important;
 }
